--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-<<<<<<< HEAD
-# dependencies
-/node_modules
-=======
 
-backend/node_modules
 
-frontend/node_modules
->>>>>>> 987c7240d2400fe773baf7b123eb293353e4566f
+backend/node_modules/
+
+frontend/node_modules/
+
+mail-checker/node_modules/
+mail-checker/dist/
