--- a/mail-checker/package.json
+++ b/mail-checker/package.json
@@ -22,6 +22,7 @@
     "mailparser": "^3.7.1",
     "node-cron": "^3.0.3",
     "sqlite3": "^5.1.7",
+    "xml-js": "^1.6.11",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
