--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "uuid": "^10.0.0",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
