--- a/backend/.env
+++ b/backend/.env
@@ -4,8 +4,15 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://autogasmexico:test123@localhost:5432/dbautogasmexico?schema=public"
+#DATABASE_URL="postgresql://autogasmexico:test123@localhost:5432/dbautogasmexico?schema=public"
+DATABASE_URL="postgresql://autogasmexico:AnT0GAsM3x1C02@database-1.cbewu804elm3.us-east-1.rds.amazonaws.com:5432/postgres?schema=public"
 SECRET=TopSecret
 
 MAILUSER = recovery@xpectrelabs.com
 MAILPSSWD = R3c0v3ry2023@
+
+
+
+# database-1.cbewu804elm3.us-east-1.rds.amazonaws.com
+# autogasmexico 
+# AnT0GAsM3x1C02
